# mywedding

./: README.md  db.sqlite3  db.sqlite3.bkp  manage.py  probando.py  pyproject.toml
domain/: admin.py  forms.py  models.py  urls.py  views.py
domain/migrations/: 0001_initial.py  0002_auto_20211202_0211.py  0003_delete_reservation.py  0004_reservation.py  0005_auto_20211202_0229.py
domain/static/js/: chained-area.js
domain/templates/: index.html
mywedding/: asgi.py  settings.py  urls.py  wsgi.py
staticfiles/admin/css/: base.css
staticfiles/js/: chained-area.js
