[tool.poetry]
name = "mywedding"
version = "0.1.0"
description = "DCT - myWedding - web application"
authors = ["Meyra Patricia Dip"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
